@@ -1,3 +1,6 @@
+Mar 07, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- game types for westernq3
+
 Feb 19, 2003: Jordi Mallach <jordi@sindominio.net>
 - update Catalan translation
 
